@@ -2479,6 +2479,12 @@
                validator="text"
                max_length="2048"
                min_length="1"/>
+        <field name="public"
+               widget="checkbox"
+               validator="choice"
+               description="[ALLOW_CUSTOMERS_TO_ORDER_THIS_PRODUCT]">
+          <enum> <option value="Yes"/> </enum>
+        </field>
         <field name="continue"
                widget="submit"
                description="[CREATE_PRODUCT]"
@@ -2519,23 +2525,11 @@
                validator="text"
                max_length="2048"
                min_length="1"/>
-        <field name="price"
-               widget="currency"
-               description="[PRICE]"
-               validator="float"
-               required="true"
-               max_value="99999999.99"
-               min_value="0.00"
-               default_value="0.00"/>
-        <field name="taxable"
-               widget="select"
-               description="[TAXABLE]"
+        <field name="public"
+               widget="checkbox"
                validator="choice"
-               required="true">
-          <enum>
-            <option value="No" description="[NO]" default="true"/>
-            <option value="Yes" description="[YES]"/>
-          </enum>
+               description="[ALLOW_CUSTOMERS_TO_ORDER_THIS_PRODUCT]">
+          <enum> <option value="Yes"/> </enum>
         </field>
         <field name="save"
                widget="submit"
@@ -2661,6 +2655,12 @@
                validator="text"
                max_length="2048"
                min_length="1"/>
+        <field name="public"
+               widget="checkbox"
+               validator="choice"
+               description="[ALLOW_CUSTOMERS_TO_ORDER_THIS_SERVICE]">
+          <enum> <option value="Yes"/> </enum>
+        </field>
         <field name="continue"
                widget="submit"
                description="[CREATE_DOMAIN_SERVICE]"
@@ -2687,6 +2687,12 @@
                validator="text"
                max_length="2048"
                min_length="1"/>
+        <field name="public"
+               widget="checkbox"
+               validator="choice"
+               description="[ALLOW_CUSTOMERS_TO_ORDER_THIS_SERVICE]">
+          <enum> <option value="Yes"/> </enum>
+        </field>
         <field name="save"
                widget="submit"
                description="[SAVE]"
@@ -2852,6 +2858,14 @@
             <option value="Required" description="[REQUIRED]" default="true"/>
           </enum>
         </field>
+        <field name="public"
+               widget="checkbox"
+               validator="choice"
+               description="[ALLOW_CUSTOMERS_TO_ORDER_THIS_SERVICE]">
+          <enum>
+            <option value="Yes"/>
+          </enum>
+        </field>
         <field name="continue"
                widget="submit"
                description="[CREATE_HOSTING_SERVICE]"
@@ -2911,6 +2925,12 @@
             <option value="Not Required" description="[NOT_REQUIRED]"/>
             <option value="Required" description="[REQUIRED]" default="true"/>
           </enum>
+        </field>
+        <field name="public"
+               widget="checkbox"
+               validator="choice"
+               description="[ALLOW_CUSTOMERS_TO_ORDER_THIS_SERVICE]">
+          <enum> <option value="Yes"/> </enum>
         </field>
         <field name="save"
                widget="submit"
