@@ -43,6 +43,10 @@
         {$services.pricing}
       {/form_table_column}
 
+      {form_table_column columnid="public" header="[PUBLIC]"}
+        {$services.public}
+      {/form_table_column}
+
       {form_table_footer}
         {form_element field="remove"}
       {/form_table_footer}
