@@ -39,6 +39,10 @@
         {$products.pricing}
       {/form_table_column}
 
+      {form_table_column columnid="public" header="[PUBLIC]"}
+        {$products.public}
+      {/form_table_column}
+
       {form_table_footer}
         {form_element field="remove"}
       {/form_table_footer}
