@@ -47,6 +47,10 @@
         {$hosting_services.pricing}
       {/form_table_column}
 
+      {form_table_column columnid="public" header="[PUBLIC]"}
+        {$hosting_services.public}
+      {/form_table_column}
+
       {form_table_footer}
         {form_element field="remove"}
       {/form_table_footer}
