@@ -18,6 +18,10 @@
         <th> {form_description field="domainrequirement"} </th>
         <td> {form_element field="domainrequirement"} </td>
       </tr>
+      <tr>
+        <th> {form_description field="public"} </th>
+        <td> {form_element field="public" option="Yes"} </td>
+      </tr>
       <tr class="footer">
         <td colspan="2">
           {form_element field="continue"}
