@@ -19,6 +19,16 @@
 class DomainServiceValidator extends FieldValidator
 {
   /**
+   * @var boolean Allow private items flag
+   */
+  protected $allowPrivateItems = true;
+
+  /**
+   * No Private Items Allowed
+   */
+  public function noPrivateItems() { $this->allowPrivateItems = false; }
+  
+  /**
    * Validate a Domain Service TLD
    *
    * Verifies that the domain service exists.
@@ -33,6 +43,11 @@ class DomainServiceValidator extends FieldValidator
 
     try { $domainDBO = load_DomainServiceDBO( $data ); }
     catch( DBNoRowsFoundException $e ) { throw new RecordNotFoundException( "DomainService" ); }
+
+    if( !$this->allowPrivateItems && !$domainDBO->isPublic() )
+      {
+	throw new RecordNotFoundException( "DomainService" );
+      }
 
     return $domainDBO;
   }
